Bug 485025 - System monitor unable to see any sensors
Summary: System monitor unable to see any sensors
Status: RESOLVED FIXED
Alias: None
Product: plasma-systemmonitor
Classification: Applications
Component: general (other bugs)
Version First Reported In: 6.0.3
Platform: Neon Linux
: NOR major
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-04-04 11:55 UTC by Tia
Modified: 2025-09-26 19:04 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.1.0
Sentry Crash Report:


Attachments
Screen shot of example (162.05 KB, image/png)
2024-04-04 11:55 UTC, Tia
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tia 2024-04-04 11:55:01 UTC
Created attachment 168143 [details]
Screen shot of example

SUMMARY
Since installing KDE Neon 6 System monitor is unable to read any sensors. Worked on Debian 12.

STEPS TO REPRODUCE
1. Start System monitor
2. Error reported "This page is missing some sensors and will not display correctly."
3. Unable to fix as no sensors are detected

OBSERVED RESULT
Running ksystemstats manually throws odd error message: 

Loaded plugin "ksystemstats_plugin_cpu" from file "/usr/lib/x86_64-linux-gnu/qt6/plugins/ksystemstats/ksystemstats_plugin_cpu.so"
Loaded plugin "ksystemstats_plugin_lmsensors" from file "/usr/lib/x86_64-linux-gnu/qt6/plugins/ksystemstats/ksystemstats_plugin_lmsensors.so"
Loaded plugin "ksystemstats_plugin_network" from file "/usr/lib/x86_64-linux-gnu/qt6/plugins/ksystemstats/ksystemstats_plugin_network.so"
Loaded plugin "ksystemstats_plugin_memory" from file "/usr/lib/x86_64-linux-gnu/qt6/plugins/ksystemstats/ksystemstats_plugin_memory.so"
Loaded plugin "ksystemstats_plugin_disk" from file "/usr/lib/x86_64-linux-gnu/qt6/plugins/ksystemstats/ksystemstats_plugin_disk.so"
Loaded plugin "ksystemstats_plugin_osinfo" from file "/usr/lib/x86_64-linux-gnu/qt6/plugins/ksystemstats/ksystemstats_plugin_osinfo.so"
Loaded plugin "ksystemstats_plugin_power" from file "/usr/lib/x86_64-linux-gnu/qt6/plugins/ksystemstats/ksystemstats_plugin_power.so"
Loaded plugin "ksystemstats_plugin_gpu" from file "/usr/lib/x86_64-linux-gnu/qt6/plugins/ksystemstats/ksystemstats_plugin_gpu.so"
ASSERT: "!d->sensorObjects.contains(id)" in file ./systemstats/SensorContainer.cpp, line 57
Aborted

Can detect sensors with lm-sensors: 

k10temp-pci-00c3
Adapter: PCI adapter
Tctl:         +56.9°C  

amdgpu-pci-6700
Adapter: PCI adapter
vddgfx:        1.43 V  
vddnb:         1.09 V  
edge:         +53.0°C  
PPT:          42.20 W  

ucsi_source_psy_USBC000:001-isa-0000
Adapter: ISA adapter
in0:           0.00 V  (min =  +0.00 V, max =  +0.00 V)
curr1:         0.00 A  (max =  +0.00 A)

BAT0-acpi-0
Adapter: ACPI interface
in0:          17.28 V  

asus-isa-0000
Adapter: ISA adapter
cpu_fan:     3100 RPM
gpu_fan:     3100 RPM

amdgpu-pci-0300
Adapter: PCI adapter
vddgfx:      613.00 mV 
fan1:           0 RPM  (min =    0 RPM, max = 4900 RPM)
edge:         +56.0°C  (crit = +100.0°C, hyst = -273.1°C)
                       (emerg = +105.0°C)
junction:     +56.0°C  (crit = +100.0°C, hyst = -273.1°C)
                       (emerg = +105.0°C)
mem:          +64.0°C  (crit = +105.0°C, hyst = -273.1°C)
                       (emerg = +110.0°C)
PPT:           5.00 W  (cap =  75.00 W)

nvme-pci-0600
Adapter: PCI adapter
Composite:    +54.9°C  (low  =  -0.1°C, high = +86.8°C)
                       (crit = +89.8°C)
Sensor 1:     +54.9°C  (low  = -273.1°C, high = +65261.8°C)

acpitz-acpi-0
Adapter: ACPI interface
temp1:        +57.0°C  (crit = +110.0°C)

EXPECTED RESULT
System monitor should detect sensors and show graphs.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: KDE neon 6.0
KDE Plasma Version: 6.0.3
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.3

ADDITIONAL INFORMATION
Sensors and ksystemstats worked normally on Debian 12 with KDE DE.
Comment 1 Jure Repinc 2024-05-10 10:25:07 UTC
I have a similar issue here. Only two hardware sensors (iwlwifi_1-virtual-0, nvme-pci-0a00) of all the ones available are shown. This is what "sensors" command shows:

nct6799-isa-0290
Adapter: ISA adapter
in0:                          920.00 mV (min =  +0.00 V, max =  +1.74 V)
in1:                            1.02 V  (min =  +0.00 V, max =  +0.00 V)  ALARM
in2:                            3.39 V  (min =  +0.00 V, max =  +0.00 V)  ALARM
in3:                            3.34 V  (min =  +0.00 V, max =  +0.00 V)  ALARM
in4:                            1.02 V  (min =  +0.00 V, max =  +0.00 V)  ALARM
in5:                            1.03 V  (min =  +0.00 V, max =  +0.00 V)
in6:                          632.00 mV (min =  +0.00 V, max =  +0.00 V)  ALARM
in7:                            3.39 V  (min =  +0.00 V, max =  +0.00 V)  ALARM
in8:                            3.30 V  (min =  +0.00 V, max =  +0.00 V)  ALARM
in9:                            3.34 V  (min =  +0.00 V, max =  +0.00 V)  ALARM
in10:                           1.39 V  (min =  +0.00 V, max =  +0.00 V)  ALARM
in11:                           1.12 V  (min =  +0.00 V, max =  +0.00 V)  ALARM
in12:                           1.03 V  (min =  +0.00 V, max =  +0.00 V)  ALARM
in13:                         440.00 mV (min =  +0.00 V, max =  +0.00 V)  ALARM
in14:                           2.03 V  (min =  +0.00 V, max =  +0.00 V)  ALARM
in15:                         848.00 mV (min =  +0.00 V, max =  +0.00 V)  ALARM
in16:                           1.82 V  (min =  +0.00 V, max =  +0.00 V)  ALARM
in17:                           1.28 V  (min =  +0.00 V, max =  +0.00 V)
fan1:                            0 RPM  (min =    0 RPM)
fan2:                         1656 RPM  (min =    0 RPM)
fan3:                            0 RPM  (min =    0 RPM)
fan4:                            0 RPM  (min =    0 RPM)
fan5:                            0 RPM  (min =    0 RPM)
fan6:                            0 RPM  (min =    0 RPM)
fan7:                            0 RPM  (min =    0 RPM)
SYSTIN:                        +34.0°C  (high = +80.0°C, hyst = +75.0°C)
                                        (crit = +125.0°C)  sensor = thermistor
CPUTIN:                        +54.0°C  (high = +80.0°C, hyst = +75.0°C)
                                        (crit = +125.0°C)  sensor = thermistor
AUXTIN0:                       +47.0°C  (high = +80.0°C, hyst = +75.0°C)
                                        (crit = +125.0°C)  sensor = thermistor
AUXTIN1:                        +5.0°C  (high = +80.0°C, hyst = +75.0°C)
                                        (crit = +125.0°C)  sensor = thermistor
AUXTIN2:                       +19.0°C  (high = +80.0°C, hyst = +75.0°C)
                                        (crit = +100.0°C)  sensor = thermistor
AUXTIN3:                       -60.0°C  (high = +80.0°C, hyst = +75.0°C)
                                        (crit = +125.0°C)  sensor = thermistor
AUXTIN4:                       +24.0°C  (high = +80.0°C, hyst = +75.0°C)
                                        (crit = +100.0°C)
PECI/TSI Agent 0 Calibration:  +61.0°C  (high = +80.0°C, hyst = +75.0°C)
AUXTIN5:                       +12.0°C  
PCH_CHIP_CPU_MAX_TEMP:          +0.0°C  
PCH_CHIP_TEMP:                  +0.0°C  
PCH_CPU_TEMP:                   +0.0°C  
TSI0_TEMP:                     +72.5°C  
intrusion0:                   ALARM
intrusion1:                   OK
beep_enable:                  disabled

k10temp-pci-00c3
Adapter: PCI adapter
Tctl:         +72.4°C  
Tccd1:        +64.5°C  

nvme-pci-0a00
Adapter: PCI adapter
Composite:    +44.9°C  (low  = -273.1°C, high = +80.8°C)
                       (crit = +80.8°C)
Sensor 1:     +44.9°C  (low  = -273.1°C, high = +65261.8°C)
Sensor 2:     +49.9°C  (low  = -273.1°C, high = +65261.8°C)

iwlwifi_1-virtual-0
Adapter: Virtual device
temp1:        +35.0°C  

amdgpu-pci-0100
Adapter: PCI adapter
vddgfx:        1.13 V  
fan1:         860 RPM  (min =    0 RPM, max = 2900 RPM)
edge:         +59.0°C  (crit = +94.0°C, hyst = -273.1°C)
PPT:          52.07 W  (cap = 180.00 W)



SYSTEM INFO:
System Monitor version 5.92.90
Operating System: openSUSE Tumbleweed 20240506
KDE Plasma Version: 6.0.80
KDE Frameworks Version: 6.2.0
Qt Version: 6.7.0
Kernel Version: 6.8.8-1-default (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 7600 6-Core Processor
Memory: 31.1 GiB of RAM
Graphics Processor: AMD Radeon RX 480 Graphics
Manufacturer: ASUS
Comment 2 Arjen Hiemstra 2024-05-29 08:20:05 UTC
> I have a similar issue here. Only two hardware sensors (iwlwifi_1-virtual-0, nvme-pci-0a00) of all the ones available are shown. This is what "sensors" command shows:

I think you're running into a different issue where one of the sensor devices is not recognised. Can you create a new issue for that?

> ASSERT: "!d->sensorObjects.contains(id)" in file ./systemstats/SensorContainer.cpp, line 57
> Aborted

So it seems this is hitting a case where we end up with a duplicate ID for something and then things crash. I'm not sure what causes the duplication, but it should not crash in any case, I'll change that so it just prints a warning and ignores the added object.
Comment 3 Bug Janitor Service 2024-05-29 12:45:01 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libksysguard/-/merge_requests/348
Comment 4 Arjen Hiemstra 2024-05-29 17:00:30 UTC
Git commit 9e825685ae0d45ecff327a27f8a7a131f83454cb by Arjen Hiemstra.
Committed on 29/05/2024 at 12:36.
Pushed by ahiemstra into branch 'master'.

systemstats: Warn when trying to add an existing object to SensorContainer

Rather than asserting and crashing, which just leaves people with
non-working systemstats. Additionally be a bit more elaborate with
regards to why we don't add the object so we have an easier time
debugging this in the future.

M  +8    -0    systemstats/CMakeLists.txt
M  +10   -3    systemstats/SensorContainer.cpp

https://invent.kde.org/plasma/libksysguard/-/commit/9e825685ae0d45ecff327a27f8a7a131f83454cb
Comment 5 Arjen Hiemstra 2024-05-29 17:06:11 UTC
Git commit ddfe3450a48f15d1202ad791fe05c97970671447 by Arjen Hiemstra.
Committed on 29/05/2024 at 17:04.
Pushed by ahiemstra into branch 'Plasma/6.1'.

systemstats: Warn when trying to add an existing object to SensorContainer

Rather than asserting and crashing, which just leaves people with
non-working systemstats. Additionally be a bit more elaborate with
regards to why we don't add the object so we have an easier time
debugging this in the future.


(cherry picked from commit 9e825685ae0d45ecff327a27f8a7a131f83454cb)

M  +8    -0    systemstats/CMakeLists.txt
M  +10   -3    systemstats/SensorContainer.cpp

https://invent.kde.org/plasma/libksysguard/-/commit/ddfe3450a48f15d1202ad791fe05c97970671447