systemstats: Warn when trying to add an existing object to SensorContainer

Rather than asserting and crashing, which just leaves people with
non-working systemstats. Additionally be a bit more elaborate with
regards to why we don't add the object so we have an easier time
debugging this in the future.

BUG: 485025